docs/specs/v0.3/11_operation.md
# RustyClaw — 稼働点検ガイド

> [!NOTE]
> **ステータス**: `[実装済]`
> **バージョン**: v0.3
> **最終更新日**: 2026-06-12（Phase 50: HA ポーリング監視項目追加）
> **目的**: RustyClaw デーモンの稼働状況を定期的または障害時に点検するための手順書
> **参照元**: [`00_rustyclaw.md`](00_rustyclaw.md)

---

## 1. 点検対象ファイル一覧

```
workspace/
├── sessions/                        # セッション別の会話履歴 (JSONL)
│   ├── cron-heartbeat.jsonl         # Heartbeat の実行履歴（肥大化に注意）
│   ├── cron-daily-summary.jsonl     # Daily Summary の実行履歴
│   ├── discord-<channelId>-<date>.jsonl  # Discord チャンネル別・日付別
│   └── http-dashboard.jsonl         # Dashboard チャットの履歴
├── memory/
│   ├── heartbeat-state.json         # 最後の各チェック実行時刻 + lastUserContact
│   ├── heartbeat-digest.md          # 最新の Heartbeat ダイジェスト（0 byte なら異常）
│   ├── ha-env-summary.txt           # HA 環境 1 行サマリー（10 分ごと更新）★ Phase 50
│   ├── ha-state.json                # HA センサー 6 サンプルリングバッファ ★ Phase 50
│   └── logs/YYYY-MM-DD.md          # 日次活動ログ（Heartbeat の詳細記録）
├── MEMORY.md                        # エージェントの長期記憶（5KB 以下が目標）
└── memory.db                        # SQLite（flush カウント・seen_items 等）
```

ログファイル（`~/.rustyclaw/rustyclaw.log`）はデーモン起動後に生成される。

---

## 2. クイック点検（所要 2〜3 分）

### 2-1. Heartbeat の最終実行時刻を確認

```bash
cat workspace/memory/heartbeat-state.json
```

**見るべき点**:
- `activityReview`（最終 Heartbeat 実行時刻）が現在時刻から 40 分以内か
- `lastUserContact`（最後のユーザー応答時刻）が期待通りか
- いずれかが大幅に過去の場合 → Heartbeat が止まっている

**正常例**:
```json
{
  "lastChecks": {
    "activityReview": "2026-05-28T06:55:17+09:00",
    "memoryMaintenance": "2026-05-28T06:55:17+09:00",
    "calendar": "2026-05-28T06:55:17+09:00",
    "email": "2026-05-28T06:55:17+09:00",
    "weather": "2026-05-28T06:55:17+09:00",
    "lastUserContact": "2026-05-28T01:15:46+09:00"
  }
}
```

---

### 2-2. heartbeat-digest.md の中身を確認

```bash
wc -c workspace/memory/heartbeat-digest.md
cat workspace/memory/heartbeat-digest.md
```

**判定**: 0 バイトなら `generate_digest()` またはファイル書き込みに異常あり。

---

### 2-3. 本日の活動ログを確認

```bash
# Heartbeat の実行回数と各時刻を列挙
grep "Heartbeat Patrol" workspace/memory/logs/$(date +%Y-%m-%d).md | head -20

# ユーザーセッションのエントリを列挙
grep "^## " workspace/memory/logs/$(date +%Y-%m-%d).md
```

**見るべき点**:
- 30 分間隔で Heartbeat が記録されているか（40 分以上の空白は異常）
- `Critical` アラートが発報されていないか

---

### 2-4. セッションファイルの状態確認

```bash
ls -lh workspace/sessions/
```

**見るべき点**:
- `cron-heartbeat.jsonl` が異常に大きくないか（1MB 超は要注意）
- Discord セッションファイルの更新時刻がメッセージ受信時刻と整合しているか

---

### 2-5. HA ポーリング状態確認（Phase 50）

```bash
# 最新サマリー確認（10 分以内に更新されているか）
cat workspace/memory/ha-env-summary.txt

# リングバッファ + スパイクフラグ確認
cat workspace/memory/ha-state.json | python3 -m json.tool

# スパイク検知ログ（CO2 >1500ppm 発報時のみ出現）
grep -i "ha.*spike\|co2.*spike\|spike.*heartbeat" ~/.rustyclaw/rustyclaw.log | tail -10
```

**判定基準**:
- `ha-env-summary.txt` が空 or 更新時刻が 15 分超 → `220_ha_env_snapshot.sh` または HA 接続に異常
- `ha-state.json` の `spike_detected: true` が持続 → CO2 が 1500ppm 超継続中（換気後に自然解除）
- スパイクログに `last_spike_heartbeat cooldown` があれば 3 時間クールダウン中（正常動作）

---

## 3. 詳細点検（所要 10〜15 分）

### 3-1. Heartbeat 応答の中身を解析

```bash
python3 - <<'EOF'
import json

with open('workspace/sessions/cron-heartbeat.jsonl') as f:
    lines = f.readlines()

total = len(lines)
empty_assistant = sum(
    1 for l in lines
    if json.loads(l).get('role') == 'assistant'
    and json.loads(l).get('content', '') == ''
)
print(f"Total entries  : {total}")
print(f"Assistant empty: {empty_assistant} / {total // 2}")

# 最新5ターンを表示
for line in lines[-10:]:
    obj = json.loads(line)
    role = obj.get('role', '?')
    content = obj.get('content', '')
    if isinstance(content, list):
        content = ' '.join(c.get('text','') for c in content if c.get('type')=='text')
    print(f"[{role}] {str(content)[:120]!r}")
EOF
```

**判定基準**:
- `empty_assistant` が全 assistant ターンの 80% 超 → LLM プロバイダが空応答、またはツール呼び出しループ制限（5回）に達した可能性
- 最新ターンの content に `HEARTBEAT_OK` が含まれているか確認

---

### 3-2. セッション別の空応答率を一括チェック

```bash
python3 - <<'EOF'
import json, os, glob

for fpath in sorted(glob.glob('workspace/sessions/*.jsonl')):
    fname = os.path.basename(fpath)
    with open(fpath) as f:
        lines = [json.loads(l) for l in f if l.strip()]
    assistants = [l for l in lines if l.get('role') == 'assistant']
    empty = [l for l in assistants if not l.get('content', '')]
    rate = len(empty) / len(assistants) * 100 if assistants else 0
    size = os.path.getsize(fpath)
    print(f"{fname:50s}  {len(lines):4d} entries  empty={len(empty)}/{len(assistants)} ({rate:.0f}%)  {size//1024}KB")
EOF
```

**判定基準**:
- 空応答率が高いセッション → そのセッションでモデルがツール呼び出しのみ生成している
- `http-dashboard.jsonl` で空率が高い → ユーザー操作が成功していない

---

### 3-3. Heartbeat の時間間隔ギャップを検出

```bash
grep -oP '\[\K[0-9]{2}:[0-9]{2}:[0-9]{2}(?=\] Heartbeat Patrol)' \
  workspace/memory/logs/$(date +%Y-%m-%d).md \
  | awk 'NR>1 {
      split(prev, a, ":");  split($0, b, ":");
      prev_min = a[1]*60+a[2]; cur_min = b[1]*60+b[2];
      diff = cur_min - prev_min;
      if (diff < 0) diff += 1440;
      if (diff > 35) printf "GAP %s -> %s (%d min)\n", prev, $0, diff;
    }
    {prev=$0}'
```

**判定基準**:
- 35 分超のギャップがある場合 → Lane B セマフォ待機（Daily Summary 等との競合）または rate limit の疑い

---

### 3-4. Discord セッションで MCP JSON 漏出を検出

```bash
python3 - <<'EOF'
import json, glob

for fpath in sorted(glob.glob('workspace/sessions/discord-*.jsonl')):
    fname = fpath.split('/')[-1]
    with open(fpath) as f:
        for line in f:
            obj = json.loads(line)
            if obj.get('role') == 'assistant':
                content = obj.get('content', '')
                if isinstance(content, list):
                    content = ' '.join(c.get('text','') for c in content if c.get('type')=='text')
                if '```json' in content and ('"action"' in content or '"function"' in content):
                    print(f"[MCP LEAK] {fname}: {content[:200]!r}")
EOF
```

---

### 3-5. SQLite の状態確認

```bash
# flush カウント・タイムスタンプ
sqlite3 workspace/memory.db "SELECT patrol_name, last_run_at FROM patrol_state WHERE patrol_name LIKE 'flush%' ORDER BY patrol_name;"

# lastUserContact
sqlite3 workspace/memory.db "SELECT patrol_name, last_run_at FROM patrol_state WHERE patrol_name = 'lastUserContact';"

# seen_items テーブルの件数
sqlite3 workspace/memory.db "SELECT COUNT(*) FROM seen_items;"
```

---

### 3-6. MEMORY.md のサイズ確認

```bash
wc -c workspace/MEMORY.md
```

**判定基準**: 5,120 バイト（5KB）超は Memory Flush の上書き機能が正常でない可能性。

---

## 4. デーモンログの確認（rustyclaw.log）

```bash
# 末尾100行（Dashboard の /logs/app に相当）
tail -100 ~/.rustyclaw/rustyclaw.log

# エラーのみ抽出
grep -i "error\|warn\|timeout\|rate.limit" ~/.rustyclaw/rustyclaw.log | tail -30

# LLM プロバイダ接続・フォールバックログ
grep -i "fallback model used\|model failed\|cooled down" ~/.rustyclaw/rustyclaw.log | tail -20

# Heartbeat の成否
grep "Heartbeat LLM\|Heartbeat failed" ~/.rustyclaw/rustyclaw.log | tail -20

# Memory Flush の動作
grep "memory flush" ~/.rustyclaw/rustyclaw.log | tail -20

# Lane セマフォの待機・タイムアウト
grep "sem\|timed out\|permit" ~/.rustyclaw/rustyclaw.log | tail -20

# HA ポーリング・スパイク検知（Phase 50）
grep -i "ha.*poll\|snapshot\|spike\|ha_env" ~/.rustyclaw/rustyclaw.log | tail -20
```

---

## 5. 既知の問題パターンと判定フロー

```
症状: チャットに ```json ... ``` ブロックが送信される
  └─ 原因: --no-agent モードで MCP ツール呼び出し JSON が漏出
     └─ 対処: AGENTS.md から不要なツール指示を削除（応急）

症状: Heartbeat が 40 分以上止まっている
  ├─ heartbeat-state.json の activityReview が古い
  ├─ ログに "timed out waiting for permit" がある
  │    └─ 原因: Lane B セマフォの空きスロット不足（Daily Summary 等との一時的な競合）
  │       └─ 対処: 各ジョブの実行時刻スケジュールの見直し・調整
  └─ ログに "rate-limit" がある
       └─ 対処: 指数バックオフによる自動クールダウン完了を待つ

症状: cron-heartbeat.jsonl が 1MB 超
  └─ 原因: 固定 session_id による履歴の無制限蓄積
     └─ 対処: ログプルーニング（Phase 27-2）参照

症状: heartbeat-digest.md が 0 バイト
  └─ 調査: generate_digest() の戻り値が空か確認
           HeartbeatService の digest 書き込みパス確認

症状: assistant 応答がすべて空
  └─ 原因: モデルがテキストなしでツール呼び出しのみ生成
     └─ 確認: RUST_LOG=debug でプロバイダの API レスポンスを確認

症状: ha-env-summary.txt が空 / 更新されない（Phase 50）
  ├─ 原因: HA サーバーが停止中または HOMEASSISTANT_TOKEN が無効
  │    └─ 確認: `wget -qO- --header "Authorization: Bearer $TOKEN" http://HA:8123/api/`
  └─ 原因: config.json の `tools.home-assistant.enabled` が false または設定未記述
       └─ 確認: `rustyclaw config show` で home-assistant セクションを確認

症状: CO2 スパイクアラートが繰り返し発報される（3 時間以内）
  └─ 原因: クールダウンロジックが動作していない（バグ）または CO2 が継続的に高い
     └─ 確認: ログで "last_spike_heartbeat cooldown" の有無を確認
```

---

## 6. 定期点検チェックリスト（週次）

| 確認項目 | コマンド | 正常基準 |
|---|---|---|
| Heartbeat 最終実行 | `cat workspace/memory/heartbeat-state.json` | 40 分以内 |
| heartbeat-digest | `wc -c workspace/memory/heartbeat-digest.md` | 0 より大きい |
| MCP JSON 漏出 | 3-4 のスクリプト | 0 件 |
| heartbeat.jsonl 肥大化 | `ls -lh workspace/sessions/cron-heartbeat.jsonl` | 500KB 以下目安 |
| MEMORY.md サイズ | `wc -c workspace/MEMORY.md` | 5KB 以下 |
| Heartbeat ギャップ | 3-3 のスクリプト | 35分以上のギャップなし |
| 空応答率 | 3-2 のスクリプト | cron-heartbeat 以外は 20% 以下 |
| SQLite flush カウント | `sqlite3 workspace/memory.db "SELECT patrol_name, last_run_at FROM patrol_state WHERE patrol_name LIKE 'flush%'"` | flush_ts が最近更新されている |
| HA サマリー更新 | `cat workspace/memory/ha-env-summary.txt` | 空でない・15 分以内に更新（HA 有効時） |
| HA スパイクフラグ | `cat workspace/memory/ha-state.json \| python3 -m json.tool \| grep spike` | spike_detected: false が通常 |

---

## 7. 将来拡張 `[将来拡張]`

### Phase 27-1: ディスク空き容量監視と SSD 保護

USB SSD の空き容量を定期監視し、残り容量が 5% 以下になった際に Discord 等へ警告アラートを送信する保護タスクの実装。

- 定期 Cron（Lane B）として実装し、容量チェック → 閾値判定 → Discord 通知の流れで動作する。
- RPi4 の USB SSD は書き込み寿命があるため、早期の容量枯渇検知がストレージ保護に直結する。

---

## 8. 関連ドキュメント

- [`05_heartbeat.md`](05_heartbeat.md) — Heartbeat の設計仕様
- [`01_pipeline.md`](01_pipeline.md) — Lane Control 設計
- [`09_dashboard.md`](09_dashboard.md) — Web Dashboard・管理用 API 仕様
